src/tests/binary-operators/26.txt
binary-operators/26.c:2:5: error: invalid operands to logical 'and' (have 'char' and 'int')
     'a' && 0;
     ^
